--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.8",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "lucascudo/laravel-pt-br-localization": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
